--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,11 +6,11 @@
 #    By: rbaum <rbaum@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2014/11/11 17:48:47 by rbaum             #+#    #+#              #
-#    Updated: 2015/03/15 17:23:41 by rbaum            ###   ########.fr        #
+#    Updated: 2015/05/01 16:09:04 by rbaum            ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
-CC = gcc-4.9
+CC = gcc
 
 CFLAG = -Wall -Werror -Wextra
 
